# mina0

./: .gitignore  Cargo.toml  README.md
host/: Cargo.toml  build.rs
host/build_srs_raw/: Cargo.toml  generated_const_params.rs  main.rs
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: biginteger.rs  build.rs  fq.rs  main.rs
