[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.1", features = ["cuda"] }
bonsai-sdk = "0.5.1"
env_logger = "0.10"
serde = "1.0"
kimchi = { path = "./../../proof-systems/kimchi" }
#mina-tree = { git = "https://github.com/openmina/openmina.git", rev = "5f7a410cc2c07572afad055477ce2a5c2d768e5b"}
rmp-serde = "1.1.2"
hex = "0.4.3"
bincode = { version = "1.3.3", features = [] }
bytemuck = "1.14.0"
anyhow = "1.0.75"
