[package]
name = "kimchi0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.1", features = [ "std" ] }
#kimchi = { git = "https://github.com/o1-labs/proof-systems.git", branch = "master" }
kimchi = { path = "../../../proof-systems/kimchi" }
#mina-tree = { git = "https://github.com/openmina/openmina.git", rev = "5f7a410cc2c07572afad055477ce2a5c2d768e5b"}
serde = "1.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-poly = "0.3.0"
anyhow = "1.0.75"
rand = "0.8.5"
serde_with = { version = "1.14.0", features = [] }
once_cell = "1.18.0"
